assets/contact.css
/* font-family: 'Dancing Script', cursive; 

{
    box-sizing: border-box;
    padding: 0;
    margin: 0;
} */

html,
body {
  height: 100%;
}

/* Header styling */

.site-name {
  font-family: "Dancing Script", cursive;
  font-size: 40px;
  padding-top: 20px;
  color: white;
  padding-left: 20px;
  padding-bottom: 20px;
  margin: 0;
}

.site-name:hover {
  background-color: blanchedalmond;
  font-size: 30px;
  color: black;
}

/* Body styling */

body {
  background-image: url("https://wallpaperaccess.com/full/240945.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  position: relative;
}

/* Contact form */

h2 {
  text-align: center;
  position: absolute;
  left: 40%;
  top: 23%;
  color: blanchedalmond;
  font-weight: bold;
}

input {
  width: 400px;
  height: 50px;
  position: relative;
}

.name {
  width: 400px;
  display: flex;
  justify-content: center;
  margin-bottom: 10px;
  position: absolute;
  top: 33%;
  left: 35%;
}

.email {
  width: 400px;
  display: flex;
  justify-content: center;
  margin-bottom: 10px;
  position: absolute;
  top: 42%;
  left: 35%;
}

.message {
  width: 400px;
  display: flex;
  justify-content: center;
  margin-bottom: 10px;
  position: absolute;
  height: 200px;
  top: 50%;
  left: 35%;
}

.form {
  border-radius: 5px;
  width: 400px;
  height: 200px;
}

.send {
  display: flex;
  justify-content: center;
  width: 400px;
  position: absolute;
  top: 80%;
  left: 35%;
}

@media only screen and (max-width: 768px) {
  /* For mobile phones: */

  .container {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
}

/* Footer */

footer {
  position: fixed;
  bottom: 0;
  width: 100%;
}

